@startuml

skinparam DefaultFontName "arial"

class Lian {
	+ addByPos( create, count = 1, start = next )
	..
	+ add( order )
	+ remove( order )
	..
	+ addOrders( order[], start )
	+ removeOrders( start, count ? )
	..
	+ clear()
	--
	+ source : Array
	+ length : Leaf.Number
	- refs : Set < Lian.Ref >
 }

 class Array {
	+ splice()
	+ length
 }

class Order {
	+ [owner] : Lian
	+ position : Leaf.Number
	+ source : V
}


class Index {
	+ title : LoL.String
	+ parts : Lian < Index >
}

class Selector {
	+ root : Option
	+ setCurrent( name, option )
	--
	- currents : Map < string, Option >
}

class Option {
	+ getState( name ) : Leaf.Boolean
	- state : Map < string, Leaf.Boolean >
}

Array <|-- Lian
Lian "1" *- "0..*" Order

Order <|-- Index
Index "1" *-"0..*" Index

Selector *- Option
Index <|-- Option

@enduml
